# codingame-summer-24

./: pyproject.toml
src/: main.py
